added new properties
